--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 	<body>
 		<header>
 			<div class="logos">
-				<h2>MOVIETY</h2>
+								<a href="#"
+					><img class="logo" src="img/logo.png" alt="FilMere Logo"
+				/></a>
 			</div>
 			<form id="form">
 				<input
