--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<header>
 			<div class="logos">
 								<a href="#"
-					><img class="logo" src="img/Screenshot 2025-03-11 150243.png" alt="FilMere Logo"
+					><img class="logo" src="img/Screenshot 2025-03-11 150243.png" alt="Moviety Logo"
 				/></a>
 			</div>
 			<form id="form">
