--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
-		<link rel="icon" href="" />
+		<link rel="icon" href="img/Moviety-Plain.png" />
 		<title>FilMere</title>
 	</head>
 	<body>
 		<header>
 			<div class="logos">
 								<a href="#"
-					><img class="logo" src="img/Moviety-nobg.png" alt="Moviety Logo"
+					><img class="logo" src="img/Moviety-Plain.png" alt="Moviety Logo"
 				/></a>
 			</div>
 			<form id="form">
